[package]
name = "adc-mcp3008"
version = "0.1.1"
authors = ["Pramode <mail@pramode.in>"]
categories = ["embedded", "hardware-support", "no-std"]
keywords = ["embedded-hal-driver", "adc"]
description = "Platform agnostic driver written using embedded-hal traits to interface with the MCP3008 / MCP3004 ADC's"
documentation = "https://docs.rs/adc-mcp3008"
license = "MIT / Apache-2.0"
repository = "https://github.com/pcein/adc-mcp3008"
readme = "quickstart.md"
edition = "2021"

[features]
async = ["dep:embedded-hal-async"]

[dependencies]
embedded-hal = "1.0.0"
embedded-hal-async = { version = "1.0.0", optional = true }
